# python-launcher

./: .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  dev-requirements.in  dev-requirements.txt  dodo.py  justfile  mkdocs.yml  netlify.toml  public API.md  requirements.txt  test_integration.py  test_main.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: cargo-audit.yml  ci.yml  dependency-review.yml  devskim.yml  main.yml  pr-check.yml  project-health.yml  publish-docs.yml  release.yml  rust-clippy.yml  rust.yml  security-check.yml
benches/: list.rs
changelog.d/: 20210723_163242_brett.md  20210723_163447_brett.md  20210723_163724_brett.md  20210723_175205_brett.md  20210724_130554_brett.md  20210724_140807_brett.md  20210724_142512_brett.md  20210724_142843_brett.md  20210724_151543_brett.md  20210725_224441_brett.md  20210730_161600_brett.md  20210730_170709_brett_criterion_0_3_5.md  20210730_171759_brett_predicates_2_0_1.md  20210730_222119_brett.md  20210806_095400_brett.md  20210812_153035_brett.md  20210815_151155_brett.md  20210823_195605_brett.md  20210909_120400_decathorpe.md  20210910_1523_cas.md  20210910_1531_hroncok.md  20210910_154500_brett.md  20210910_154600_brett.md  20210929_165107_brett.md  20211017_121845_brett.md  20211026_081619_tomfleet2018_use_just.md  20211102_180244_brett.md  20211104_202151_brett.md  20211108_201925_tomfleet2018.md  20220115_092336_brett.md  README.md  scriv.ini
completions/: py.fish
docs/: cli.md  development.md  faq.md  index.md  install.md  requirements.txt
docs/control-flow/: control_flow.dot
docs/man-page/: py.1  py.1.md
docs/readme/: template.md
man/: py.1  py.1.md
man-page/: py.1  py.1.md
release/: __main__.py  notes.py  readme.py  requirements.txt  tarball.py  version.py
src/: CONTRIBUTING.md  HELP.txt  cli.rs  lib.rs  main.rs  path.rs  version.rs
tests/: cli_system_tests.rs  lib_system_tests.rs  main_tests.rs  test_main.py
tests/common/: mod.rs
