[package]
name = "python-launcher"
description = "The Python launcher for Unix"
version = "1.0.0"
authors = ["Brett Cannon <brett@python.org>"]
repository = "https://github.com/brettcannon/python-launcher"
readme = "README.md"
include = [
    "/src/",
    "/tests/",
    "/completions/",
    "/docs/man-page/py.1",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]
license = "MIT"
keywords = ["Python"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.58"

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
name = "list"
harness = false

[[bin]]
name = "py"
path = "src/main.rs"

[dependencies]
comfy-table = "6.0.0"
exitcode = "1.1.2"
human-panic = "1.0.3"
log = "0.4.17"
nix = "0.24.2"
stderrlog = "0.5.3"

[dev-dependencies]
assert_cmd = "2.0.4"
criterion = "0.3.6"
predicates = "2.1.1"
serial_test = "0.9.0"
tempfile = "3.3.0"
test-case = "2.2.1"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
# https://github.com/johnthagen/min-sized-rust
lto = true
strip = true
codegen-units = 1
