[package]
name = "python-launcher"
description = "The Python launcher for Unix"
version = "1.0.0"
authors = ["Brett Cannon <brett@python.org>"]
homepage = "https://python-launcher.app"
repository = "https://github.com/brettcannon/python-launcher"
readme = "README.md"
include = [
    "/src/",
    "/tests/",
    "/completions/",
    "/man-page/py.1",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]
license = "MIT"
keywords = ["Python"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.58"

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
name = "list"
harness = false

[[bin]]
name = "py"
path = "src/main.rs"

[dependencies]
comfy-table = "7.0.1"
exitcode = "1.1.2"
human-panic = "1.1.5"
log = "0.4.19"
nix = "0.26.2"
stderrlog = "0.5.4"

[dev-dependencies]
assert_cmd = "2.0.11"
criterion = "0.4.0"
predicates = "3.0.3"
serial_test = "2.0.0"
tempfile = "3.6.0"
test-case = "3.1.0"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
# https://github.com/johnthagen/min-sized-rust
lto = true
strip = true
codegen-units = 1
