[package]
name = "python-launcher"
description = "The Python launcher for Unix"
version = "1.0.0"
authors = ["Brett Cannon <brett@python.org>"]
homepage = "https://python-launcher.app"
repository = "https://github.com/brettcannon/python-launcher"
readme = "README.md"
include = [
    "/src/",
    "/tests/",
    "/completions/",
    "/man-page/py.1",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]
license = "MIT"
keywords = ["Python"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.58"

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
name = "list"
harness = false

[[bin]]
name = "py"
path = "src/main.rs"

[dependencies]
comfy-table = "7.1.0"
exitcode = "1.1.2"
human-panic = "1.2.1"
log = "0.4.20"
nix = {version = "0.27.1", features = ["process"]}
stderrlog = "0.5.4"

[dev-dependencies]
assert_cmd = "2.0.12"
criterion = "0.5.1"
predicates = "3.0.4"
serial_test = "2.0.0"
tempfile = "3.8.0"
test-case = "3.2.1"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
# https://github.com/johnthagen/min-sized-rust
lto = true
strip = true
codegen-units = 1
